--- a/index.html
+++ b/index.html
@@ -2,73 +2,96 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>HubSpot</title>
+    <title>HubSpot | Inbound Marketing, Sales, and Service Software</title>
+
+    <!-- Google Fonts -->
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
+    <!-- /Google Fonts -->
+
+    <!-- font-awesome cdn -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.css" integrity="sha512-f73UKwzP1Oia45eqHpHwzJtFLpvULbhVpEJfaWczo/ZCV5NWSnK4vLDnjTaMps28ocZ05RbI83k2RlQH92zy7A==" crossorigin="anonymous" />
+    <!-- /font-awesome cdn -->
+
   </head>
   <body>
 
     <!-- Header -->
     <header>
       <div class="header-top">
+        <div class="container-70">
 
-        <div class="header-top-1">
-          <ul class="menu-1">
-            <li>
-              <i class="fas fa-globe-europe"></i>
-            </li>
-            <li>English</li>
-            <li>
-              <i class="fas fa-chevron-down"></i>
-            </li>
-            <li>Contact Us</li>
-          </ul>
-        </div>
+          <!-- header-top-left -->
+          <div class="header-top-left">
+            <ul class="list-left">
+              <li>
+                <a href="#" id="language">
+                  <i class="fas fa-globe-europe"></i>English
+                  <i class="fas fa-chevron-down"></i>
+                </a>
+              </li>
+              <li>
+                <a href="#" id="contact-us">Contact Us</a>
+              </li>
+            </ul>
+          </div>
+          <!-- /header-top-left -->
 
-        <div class="header-top-2">
-          <ul class="menu-2">
-            <li>
-              <i class="fas fa-search"></i>
-            </li>
-            <li>
-              Log in
-            </li>
-            <li>
-              <button type="button" name="button">GetHubspotFree</button>
-            </li>
-          </ul>
+          <!-- header-top-right -->
+          <div class="header-top-right">
+            <ul class="list-right">
+              <li>
+                <i class="fas fa-search"></i>
+              </li>
+              <li>
+                <a href="#" id="log-in">Log in</a>
+              </li>
+              <li>
+                <a href="#" id="get-hubspot-free">Get HubSpot free</a>
+              </li>
+            </ul>
+          </div>
+          <!-- /header-top-right -->
+
         </div>
       </div>
 
-      <div class="header-bottom">
-        <div class="header-bottom-1">
-          <img src="img/logo.svg" alt="HubSpot Logo">
+        <div class="header-bottom">
+          <div class="container-70">
+
+            <div class="header-bottom-left">
+              <img src="img/logo.svg" alt="HubSpot Logo">
+            </div>
+
+            <!-- header-bottom-right -->
+            <div class="header-bottom-right">
+              <ul class="menu">
+                <li>
+                  Software
+                  <i class="fas fa-chevron-down"></i>
+                </li>
+                <li>
+                  Pricing
+                </li>
+                <li>
+                  Resources
+                  <i class="fas fa-chevron-down"></i>
+                </li>
+                <li>
+                  Partners
+                  <i class="fas fa-chevron-down"></i>
+                </li>
+                <li>
+                  About
+                  <i class="fas fa-chevron-down"></i>
+                </li>
+              </ul>
+            </div>
+            <!-- /header-bottom-right -->
+
+          </div>
         </div>
 
-        <div class="header-bottom-2">
-          <ul class="menu-3">
-            <li>Software</li>
-            <li>
-              <i class="fas fa-chevron-down"></i>
-            </li>
-            <li>Pricing</li>
-            <li>Resources</li>
-            <li>
-              <i class="fas fa-chevron-down"></i>
-            </li>
-            <li>Partners</li>
-            <li>
-              <i class="fas fa-chevron-down"></i>
-            </li>
-            <li>About</li>
-            <li>
-              <i class="fas fa-chevron-down"></i>
-            </li>
-          </ul>
-        </div>
-
-      </div>
     </header>
     <!-- /Header -->
 
