--- a/index.html
+++ b/index.html
@@ -60,18 +60,20 @@
           <div class="container-70">
 
             <div class="header-bottom-left">
-              <img src="img/logo.svg" alt="HubSpot Logo">
+              <a href="#">
+                <img src="img/logo.svg" alt="HubSpot Logo">
+              </a>
             </div>
 
             <!-- header-bottom-right -->
-            <div class="header-bottom-right">
+            <nav class="header-bottom-right">
               <ul class="menu">
                 <li>
                   Software
                   <i class="fas fa-chevron-down"></i>
                 </li>
                 <li>
-                  Pricing
+                  <a href="#">Pricing</a>
                 </li>
                 <li>
                   Resources
@@ -86,7 +88,7 @@
                   <i class="fas fa-chevron-down"></i>
                 </li>
               </ul>
-            </div>
+            </nav>
             <!-- /header-bottom-right -->
 
           </div>
