--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
 
       <!-- Section -->
       <section>
+        <!-- section-1 -->
         <div class="section-1">
           <div class="container-70">
             <div class="section-1-left">
@@ -112,29 +113,32 @@
             </div>
           </div>
         </div>
+        <!-- /section-1 -->
       </section>
       <!-- /Section -->
 
       <!-- Section -->
       <section>
+        <!-- section-2 -->
         <div class="section-2">
-
           <div class="container-70">
 
-
+            <!-- section-2-top -->
             <div class="section-2-top">
               <img src="img/integrations.png" alt="integrations.png">
               <h2>Powerful alone. Better together.</h2>
               <p>HubSpot offers a complete CRM platform with all the tools and integrations you need to grow better — whether you want to increase leads, accelerate sales, streamline customer service, or build a powerful website. They’re powerful alone, but even better when used together.</p>
             </div>
+            <!-- /section-2-top -->
 
-
+            <!-- section-2-center -->
             <div class="section-2-center clearfix">
 
               <div class="section-2-center-1">
                 <img src="img/crm.svg" alt="crm.svg">
                 <a href="#">Learn More</a>
               </div>
+
               <div class="section-2-center-2">
                 <h2>Free HubSpot CRM</h2>
                 <p>Everything you need to organize, track, and build better relationships with leads and customers. Yes, It's 100% free. Forever.</p>
@@ -157,7 +161,9 @@
               </div>
 
             </div>
+            <!-- /section-2-center -->
 
+            <!-- section-2-bottom -->
             <div class="section-2-bottom clearfix">
 
               <div class="section-2-bottom-1">
@@ -231,7 +237,7 @@
 
       <!-- Section -->
       <section>
-        <div class="section-3">
+        <div class="section-3 clearfix">
 
           <div class="container-70">
 
