--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
                 <img src="img/marketing.svg" alt="marketing.svg">
                 <h2>Marketing Hub</h2>
                 <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaigns at scale.</p>
+                <hr>
                 <h3>Popular Features</h3>
                 <ul>
                   <li>
@@ -191,6 +192,7 @@
                 <img src="img/sales.svg" alt="sales.svg">
                 <h2>Sales Hub</h2>
                 <p>Sales CRM software to help you get deeper insights into prospects, automate the tasks you hate, and close more deals faster.</p>
+                <hr>
                 <h3>Popular Features</h3>
                 <ul>
                   <li>
@@ -212,6 +214,7 @@
                 <img src="img/service-hub.svg" alt="service-hub.svg">
                 <h2>Service Hub</h2>
                 <p>Customer service software to help you connect with customers, exceed expectations, and turn them into promoters who grow your business.</p>
+                <hr>
                 <h3>Popular Features</h3>
                 <ul>
                   <li>
@@ -247,43 +250,53 @@
             </div>
             <div class="section-3-bottom-1">
               <img src="img/homepage_community_agency.svg" alt="homepage_community_agency.svg">
-              <h2>150+</h2>
+              <h2>
+                150<i class="fas fa-plus"></i>
+              </h2>
               <p>HubSpot user groups</p>
             </div>
             <div class="section-3-bottom-2">
               <img src="img/homepage_community_blog.svg" alt="homepage_community_blog.svg">
-              <h2>7M+</h2>
+              <h2>
+                7M<i class="fas fa-plus"></i>
+              </h2>
               <p>monthly visits</p>
             </div>
             <div class="section-3-bottom-3">
               <img src="img/homepage_community_academy.svg" alt="homepage_community_academy.svg">
-              <h2>7M+</h2>
-              <p>monthly visits</p>
+              <h2>
+                276K<i class="fas fa-plus"></i>
+              </h2>
+              <p>certified professionals</p>
             </div>
             <div class="section-3-bottom-4">
               <img src="img/homepage_community_inbound.svg" alt="homepage_community_inbound.svg">
-              <h2>7M+</h2>
-              <p>monthly visits</p>
+              <h2>26K</h2>
+              <p>registered attendees</p>
             </div>
             <div class="section-3-bottom-5">
               <img src="img/HubSpot-App-Marketplace-White.webp" alt="HubSpot-App-Marketplace-White.webp">
-              <h2>7M+</h2>
-              <p>monthly visits</p>
+              <h2>
+                500<i class="fas fa-plus"></i>
+              </h2>
+              <p>integrations</p>
             </div>
             <div class="section-3-bottom-6">
               <img src="img/homepage_community_globe.svg" alt="homepage_community_globe.svg">
-              <h2>7M+</h2>
-              <p>monthly visits</p>
+              <h2>6</h2>
+              <p>languages</p>
             </div>
             <div class="section-3-bottom-7">
               <img src="img/homepage_community_followers.svg" alt="homepage_community_followers.svg">
-              <h2>7M+</h2>
-              <p>monthly visits</p>
+              <h2>
+                2.6M<i class="fas fa-plus"></i>
+              </h2>
+              <p>social followers</p>
             </div>
             <div class="section-3-bottom-8">
               <img src="img/Lists.svg" alt="Lists.svg">
-              <h2>7M+</h2>
-              <p>monthly visits</p>
+              <h2>86,000</h2>
+              <p>customers</p>
             </div>
 
           </div>
@@ -293,7 +306,7 @@
 
       <!-- Section -->
       <section>
-        <div class="section-4">
+        <div class="section-4 clearfix">
 
           <div class="container-70">
 
@@ -328,71 +341,131 @@
 
       <!-- Footer -->
       <footer>
-        <div class="footer">
+        <div class="footer clearfix">
 
           <div class="container-70">
 
             <div class="footer-top-1">
               <h3>Popular Features</h3>
               <ul>
-                <li>Free Meeting Scheduler App</li>
-                <li>Social Media Tools</li>
-                <li>Email Tracking Software</li>
-                <li>Sales Email Automation</li>
-                <li>Ads Software</li>
+                <li>
+                  <a href="#">Free Meeting Scheduler App</a>
+                </li>
+                <li>
+                  <a href="#">Social Media Tools</a>
+                </li>
+                <li>
+                  <a href="#">Email Tracking Software</a>
+                </li>
+                <li>
+                  <a href="#">Sales Email Automation</a>
+                </li>
+                <li>
+                  <a href="#">Ads Software</a>
+                </li>
               </ul>
             </div>
             <div class="footer-top-2">
               <h3>Popular Features</h3>
               <ul>
-                <li>Sales Email Templates</li>
-                <li>Help Desk Software</li>
-                <li>Free Online Form Builder</li>
-                <li>Free Chatbot Builder</li>
-                <li>Free Live Chat Software</li>
+                <li>
+                  <a href="#">Sales Email Templates</a>
+                </li>
+                <li>
+                  <a href="#">Help Desk Software</a>
+                </li>
+                <li>
+                  <a href="#">Free Online Form Builder</a>
+                </li>
+                <li>
+                  <a href="#">Free Chatbot Builder</a>
+                </li>
+                <li>
+                  <a href="#">Free Live Chat Software</a>
+                </li>
               </ul>
             </div>
             <div class="footer-top-3">
               <h3>Free Tools</h3>
               <ul>
-                <li>Website Grader</li>
-                <li>Make My Persona</li>
-                <li>Email Signature Generator</li>
-                <li>Blog Ideas Generator</li>
-                <li>Invoice Template Generator</li>
+                <li>
+                  <a href="#">Website Grader</a>
+                </li>
+                <li>
+                  <a href="#">Make My Persona</a>
+                </li>
+                <li>
+                  <a href="#">Email Signature Generator</a>
+                </li>
+                <li>
+                  <a href="#">Blog Ideas Generator</a>
+                </li>
+                <li>
+                  <a href="#">Invoice Template Generator</a>
+                </li>
               </ul>
             </div>
             <div class="footer-top-4">
               <h3>Company</h3>
               <ul>
-                <li>About Us</li>
-                <li>Careers</li>
-                <li>Management Team</li>
-                <li>Board of Directors</li>
-                <li>Investor Relations</li>
                 <li>
-                  <a href="#">Contact HubSpot Support</a>
+                  <a href="#">About Us</a>
                 </li>
                 <li>
-                  <i class="fab fa-facebook-f"></i>
-                  <i class="fab fa-instagram"></i>
-                  <i class="fab fa-youtube"></i>
-                  <i class="fab fa-twitter"></i>
-                  <i class="fab fa-linkedin-in"></i>
+                  <a href="#">Careers</a>
+                </li>
+                <li>
+                  <a href="#">Management Team</a>
+                </li>
+                <li>
+                  <a href="#">Board of Directors</a>
+                </li>
+                <li>
+                  <a href="#">Investor Relations</a>
+                </li>
+                <li>
+                  <a href="#" id="contact-support">Contact HubSpot Support</a>
+                </li>
+                <li>
+                  <a href="#" id="footer-icon">
+                    <i class="fab fa-facebook-f"></i>
+                  </a>
+                  <a href="#" id="footer-icon">
+                    <i class="fab fa-instagram"></i>
+                  </a>
+                  <a href="#" id="footer-icon">
+                    <i class="fab fa-youtube"></i>
+                  </a>
+                  <a href="#" id="footer-icon">
+                    <i class="fab fa-twitter"></i>
+                  </a>
+                  <a href="#" id="footer-icon">
+                    <i class="fab fa-linkedin-in"></i>
+                  </a>
                 </li>
               </ul>
             </div>
             <div class="footer-bottom">
               <div class="footer-bottom-1">
-                <h4>English Deutsch &#x65E5;&#x672C;&#x8A9E; Espa&ntilde;ol Portugu&ecirc;s Fran&ccedil;ais</h4>
+                <h4>
+                  <a href="#">English</a>
+                  <a href="#">Deutsch</a>
+                  <a href="#">&#x65E5;&#x672C;&#x8A9E;</a>
+                  <a href="#">Espa&ntilde;ol</a>
+                  <a href="#">Portugu&ecirc;s</a>
+                  <a href="#">Fran&ccedil;ais</a>
+                </h4>
               </div>
               <div class="footer-bottom-2">
                 <div class="footer-bottom-2-1">
-                  <img src="img/Wordmark-White.svg" alt="Wordmark-White.svg">
+                  <a href="#">
+                    <img src="img/Wordmark-White.svg" alt="Wordmark-White.svg">
+                  </a>
                   <h4>Copyright &copy; 2019 HubSpot, Inc.</h4>
                 </div>
                 <div class="footer-bottom-2-2">
-                  <span>Legal stuff Privacy Policy</span>
+                  <a href="#">Legal stuff</a>
+                  <a href="#">Privacy Policy</a>
                 </div>
               </div>
             </div>
