--- a/index.html
+++ b/index.html
@@ -100,9 +100,8 @@
     <!-- Main -->
     <main>
 
-      <!-- Section -->
+      <!-- Section 1-->
       <section>
-        <!-- section-1 -->
         <div class="section-1">
           <div class="container-70">
             <div class="section-1-left">
@@ -113,13 +112,11 @@
             </div>
           </div>
         </div>
-        <!-- /section-1 -->
       </section>
-      <!-- /Section -->
+      <!-- /Section 1-->
 
-      <!-- Section -->
+      <!-- Section 2-->
       <section>
-        <!-- section-2 -->
         <div class="section-2">
           <div class="container-70">
 
@@ -134,12 +131,12 @@
             <!-- section-2-center -->
             <div class="section-2-center clearfix">
 
-              <div class="section-2-center-1">
+              <div class="section-2-center-left">
                 <img src="img/crm.svg" alt="crm.svg">
                 <a href="#">Learn More</a>
               </div>
 
-              <div class="section-2-center-2">
+              <div class="section-2-center-right">
                 <h2>Free HubSpot CRM</h2>
                 <p>Everything you need to organize, track, and build better relationships with leads and customers. Yes, It's 100% free. Forever.</p>
                 <h3>Popolar Feature</h3>
@@ -166,7 +163,7 @@
             <!-- section-2-bottom -->
             <div class="section-2-bottom clearfix">
 
-              <div class="section-2-bottom-1">
+              <div class="section-2-bottom-left">
                 <img src="img/marketing.svg" alt="marketing.svg">
                 <h2>Marketing Hub</h2>
                 <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaigns at scale.</p>
@@ -188,7 +185,7 @@
                 </ul>
                 <a href="#">Learn More</a>
               </div>
-              <div class="section-2-bottom-2">
+              <div class="section-2-bottom-center">
                 <img src="img/sales.svg" alt="sales.svg">
                 <h2>Sales Hub</h2>
                 <p>Sales CRM software to help you get deeper insights into prospects, automate the tasks you hate, and close more deals faster.</p>
@@ -210,7 +207,7 @@
                 </ul>
                 <a href="#">Learn More</a>
               </div>
-              <div class="section-2-bottom-3">
+              <div class="section-2-bottom-right">
                 <img src="img/service-hub.svg" alt="service-hub.svg">
                 <h2>Service Hub</h2>
                 <p>Customer service software to help you connect with customers, exceed expectations, and turn them into promoters who grow your business.</p>
@@ -233,12 +230,14 @@
                 <a href="#">Learn More</a>
               </div>
             </div>
+            <!-- /section-2-bottom -->
+
           </div>
         </div>
       </section>
-      <!-- /Section -->
+      <!-- /Section 2-->
 
-      <!-- Section -->
+      <!-- Section 3-->
       <section>
         <div class="section-3 clearfix">
 
@@ -248,6 +247,8 @@
               <h2>Learn and grow with award-winning support and a thriving community behind you.</h2>
               <p>You don't have to go it alone. Master the inbound methodology and get the most out of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales pros just like you.</p>
             </div>
+
+            <!-- section-3-bottom -->
             <div class="section-3-bottom-1">
               <img src="img/homepage_community_agency.svg" alt="homepage_community_agency.svg">
               <h2>
@@ -298,13 +299,14 @@
               <h2>86,000</h2>
               <p>customers</p>
             </div>
+            <!-- /section-3-bottom -->
 
           </div>
         </div>
       </section>
-      <!-- /Section -->
+      <!-- /Section 3-->
 
-      <!-- Section -->
+      <!-- Section 4-->
       <section>
         <div class="section-4 clearfix">
 
@@ -314,6 +316,7 @@
               <h2>86,000</h2>
               <p>customers in over 120 countries growing their businesses with HubSpot</p>
             </div>
+
             <div class="section-4-top-right">
               <img src="img/Atlassian-horizontal-blue@2x.webp" alt="Atlassian-horizontal-blue@2x.webp">
               <img src="img/doordash_owler_20181011_194113_original@2x.webp" alt="doordash_owler_20181011_194113_original@2x.webp">
@@ -324,12 +327,14 @@
               <img src="img/Classpass-logo@2x.webp" alt="Classpass-logo@2x.webp">
               <img src="img/VMware_logo_gry_RGB_300dpi@2x.webp" alt="VMware_logo_gry_RGB_300dpi@2x.webp">
             </div>
+
             <div class="section-4-bottom-left">
               <h2>Start Growing With HubSpot Today</h2>
               <p>With tools to make every part of your process more human and a support team excited to help you, getting started with inbound has never been easier.</p>
               <a href="#">Get Hubspot free</a>
               <p>Get started with FREE tools, or get more with our premium software.</p>
             </div>
+
             <div class="section-4-bottom-right">
               <img src="img/woman.webp" alt="woman.webp">
             </div>
@@ -337,7 +342,7 @@
           </div>
         </div>
       </section>
-      <!-- /Section -->
+      <!-- /Section 4-->
 
       <!-- Footer -->
       <footer>
@@ -365,6 +370,7 @@
                 </li>
               </ul>
             </div>
+
             <div class="footer-top-2">
               <h3>Popular Features</h3>
               <ul>
@@ -385,6 +391,7 @@
                 </li>
               </ul>
             </div>
+
             <div class="footer-top-3">
               <h3>Free Tools</h3>
               <ul>
@@ -405,6 +412,7 @@
                 </li>
               </ul>
             </div>
+
             <div class="footer-top-4">
               <h3>Company</h3>
               <ul>
@@ -445,7 +453,9 @@
                 </li>
               </ul>
             </div>
+
             <div class="footer-bottom">
+
               <div class="footer-bottom-1">
                 <h4>
                   <a href="#">English</a>
@@ -456,18 +466,20 @@
                   <a href="#">Fran&ccedil;ais</a>
                 </h4>
               </div>
+
               <div class="footer-bottom-2">
-                <div class="footer-bottom-2-1">
+                <div class="footer-bottom-2-left">
                   <a href="#">
                     <img src="img/Wordmark-White.svg" alt="Wordmark-White.svg">
                   </a>
                   <h4>Copyright &copy; 2019 HubSpot, Inc.</h4>
                 </div>
-                <div class="footer-bottom-2-2">
+                <div class="footer-bottom-2-right">
                   <a href="#">Legal stuff</a>
                   <a href="#">Privacy Policy</a>
                 </div>
               </div>
+
             </div>
 
           </div>
