--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
             <!-- header-bottom-right -->
             <nav class="header-bottom-right">
-              <ul class="menu">
+              <ul id="menu">
                 <li>
                   Software
                   <i class="fas fa-chevron-down"></i>
@@ -185,6 +185,7 @@
                 </ul>
                 <a href="#">Learn More</a>
               </div>
+
               <div class="section-2-bottom-center">
                 <img src="img/sales.svg" alt="sales.svg">
                 <h2>Sales Hub</h2>
@@ -207,6 +208,7 @@
                 </ul>
                 <a href="#">Learn More</a>
               </div>
+
               <div class="section-2-bottom-right">
                 <img src="img/service-hub.svg" alt="service-hub.svg">
                 <h2>Service Hub</h2>
@@ -256,6 +258,7 @@
               </h2>
               <p>HubSpot user groups</p>
             </div>
+
             <div class="section-3-bottom-2">
               <img src="img/homepage_community_blog.svg" alt="homepage_community_blog.svg">
               <h2>
@@ -263,6 +266,7 @@
               </h2>
               <p>monthly visits</p>
             </div>
+
             <div class="section-3-bottom-3">
               <img src="img/homepage_community_academy.svg" alt="homepage_community_academy.svg">
               <h2>
@@ -270,11 +274,13 @@
               </h2>
               <p>certified professionals</p>
             </div>
+
             <div class="section-3-bottom-4">
               <img src="img/homepage_community_inbound.svg" alt="homepage_community_inbound.svg">
               <h2>26K</h2>
               <p>registered attendees</p>
             </div>
+
             <div class="section-3-bottom-5">
               <img src="img/HubSpot-App-Marketplace-White.webp" alt="HubSpot-App-Marketplace-White.webp">
               <h2>
@@ -282,11 +288,13 @@
               </h2>
               <p>integrations</p>
             </div>
+
             <div class="section-3-bottom-6">
               <img src="img/homepage_community_globe.svg" alt="homepage_community_globe.svg">
               <h2>6</h2>
               <p>languages</p>
             </div>
+
             <div class="section-3-bottom-7">
               <img src="img/homepage_community_followers.svg" alt="homepage_community_followers.svg">
               <h2>
@@ -294,6 +302,7 @@
               </h2>
               <p>social followers</p>
             </div>
+
             <div class="section-3-bottom-8">
               <img src="img/Lists.svg" alt="Lists.svg">
               <h2>86,000</h2>
