--- a/index.html
+++ b/index.html
@@ -317,13 +317,13 @@
 
       <!-- Section 4-->
       <section>
-        <div class="section-4 clearfix">
+        <div class="section-4">
 
           <div class="container-70">
 
             <div class="section-4-top-left">
               <h2>86,000</h2>
-              <p>customers in over 120 countries growing their businesses with HubSpot</p>
+              <p>customers in over <b>120</b><br>countries growing their<br>businesses with HubSpot</p>
             </div>
 
             <div class="section-4-top-right">
