--- a/index.html
+++ b/index.html
@@ -444,21 +444,33 @@
                   <a href="#" id="contact-support">Contact HubSpot Support</a>
                 </li>
                 <li>
-                  <a href="#" id="footer-icon">
-                    <i class="fab fa-facebook-f"></i>
-                  </a>
-                  <a href="#" id="footer-icon">
-                    <i class="fab fa-instagram"></i>
-                  </a>
-                  <a href="#" id="footer-icon">
-                    <i class="fab fa-youtube"></i>
-                  </a>
-                  <a href="#" id="footer-icon">
-                    <i class="fab fa-twitter"></i>
-                  </a>
-                  <a href="#" id="footer-icon">
-                    <i class="fab fa-linkedin-in"></i>
-                  </a>
+                  <ul>
+                    <li>
+                      <a href="#">
+                        <i class="fab fa-facebook-f"></i>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <i class="fab fa-instagram"></i>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <i class="fab fa-youtube"></i>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <i class="fab fa-twitter"></i>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <i class="fab fa-linkedin-in"></i>
+                      </a>
+                    </li>
+                  </ul>
                 </li>
               </ul>
             </div>
