--- a/index.html
+++ b/index.html
@@ -321,6 +321,7 @@
 
           <div class="container-70">
 
+            <!-- section-4-top -->
             <div class="section-4-top-left">
               <h2>86,000</h2>
               <p>customers in over <b>120</b><br>countries growing their<br>businesses with HubSpot</p>
@@ -336,7 +337,9 @@
               <img src="img/Classpass-logo@2x.webp" alt="Classpass-logo@2x.webp">
               <img src="img/VMware_logo_gry_RGB_300dpi@2x.webp" alt="VMware_logo_gry_RGB_300dpi@2x.webp">
             </div>
+            <!-- /section-4-top -->
 
+            <!-- section-4-bottom -->
             <div class="section-4-bottom-left">
               <h2>Start Growing With HubSpot Today</h2>
               <p>With tools to make every part of your process more human and a support team excited to help you, getting started with inbound has never been easier.</p>
@@ -347,6 +350,7 @@
             <div class="section-4-bottom-right">
               <img src="img/woman.webp" alt="woman.webp">
             </div>
+            <!-- /section-4-bottom -->
 
           </div>
         </div>
@@ -362,6 +366,7 @@
 
         <div class="container-70">
 
+          <!-- footer-top -->
           <div class="footer-top-1">
             <h3>Popular Features</h3>
             <ul>
@@ -477,7 +482,9 @@
               </li>
             </ul>
           </div>
+          <!-- /footer-top -->
 
+          <!-- footer-bottom -->
           <div class="footer-bottom">
 
             <div class="footer-bottom-1">
@@ -526,6 +533,7 @@
             </div>
 
           </div>
+          <!-- /footer-bottom -->
 
         </div>
       </div>
