--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
         <div class="header-bottom">
           <div class="container-70">
 
-            <div class="header-bottom-left">
+            <div class="header-logo">
               <a href="#">
                 <img src="img/logo.svg" alt="HubSpot Logo">
               </a>
             </div>
 
-            <!-- header-bottom-right -->
-            <nav class="header-bottom-right">
+            <!-- header-nav -->
+            <nav class="header-nav">
               <ul id="menu">
                 <li>
                   Software
@@ -89,7 +89,7 @@
                 </li>
               </ul>
             </nav>
-            <!-- /header-bottom-right -->
+            <!-- /header-nav -->
 
           </div>
         </div>
@@ -128,15 +128,15 @@
             </div>
             <!-- /section-2-top -->
 
-            <!-- section-2-center -->
-            <div class="section-2-center clearfix">
+            <!-- section-2-crm -->
+            <div class="section-2-crm clearfix">
 
-              <div class="section-2-center-left">
+              <div class="img-crm">
                 <img src="img/crm.svg" alt="crm.svg">
                 <a href="#">Learn More</a>
               </div>
 
-              <div class="section-2-center-right">
+              <div class="hubspot-crm">
                 <h2>Free HubSpot CRM</h2>
                 <p>Everything you need to organize, track, and build better relationships with leads and customers. Yes, It's 100% free. Forever.</p>
                 <h3>Popolar Feature</h3>
@@ -158,12 +158,12 @@
               </div>
 
             </div>
-            <!-- /section-2-center -->
+            <!-- /section-2-crm -->
 
-            <!-- section-2-bottom -->
-            <div class="section-2-bottom clearfix">
+            <!-- section-2-cards -->
+            <div class="section-2-cards clearfix">
 
-              <div class="section-2-bottom-left">
+              <div class="card">
                 <img src="img/marketing.svg" alt="marketing.svg">
                 <h2>Marketing Hub</h2>
                 <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaigns at scale.</p>
@@ -186,7 +186,7 @@
                 <a href="#">Learn More</a>
               </div>
 
-              <div class="section-2-bottom-center">
+              <div id="margin" class="card">
                 <img src="img/sales.svg" alt="sales.svg">
                 <h2>Sales Hub</h2>
                 <p>Sales CRM software to help you get deeper insights into prospects, automate the tasks you hate, and close more deals faster.</p>
@@ -209,7 +209,7 @@
                 <a href="#">Learn More</a>
               </div>
 
-              <div class="section-2-bottom-right">
+              <div class="card">
                 <img src="img/service-hub.svg" alt="service-hub.svg">
                 <h2>Service Hub</h2>
                 <p>Customer service software to help you connect with customers, exceed expectations, and turn them into promoters who grow your business.</p>
@@ -232,7 +232,7 @@
                 <a href="#">Learn More</a>
               </div>
             </div>
-            <!-- /section-2-bottom -->
+            <!-- /section-2-cards -->
 
           </div>
         </div>
@@ -250,8 +250,8 @@
               <p>You don't have to go it alone. Master the inbound methodology and get the most out of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales pros just like you.</p>
             </div>
 
-            <!-- section-3-bottom -->
-            <div class="section-3-bottom-1">
+            <!-- section-3-numbers -->
+            <div class="number">
               <img src="img/homepage_community_agency.svg" alt="homepage_community_agency.svg">
               <h2>
                 150 <i class="fas fa-plus"></i>
@@ -259,7 +259,7 @@
               <p>HubSpot user groups</p>
             </div>
 
-            <div class="section-3-bottom-2">
+            <div class="number">
               <img src="img/homepage_community_blog.svg" alt="homepage_community_blog.svg">
               <h2>
                 7M <i class="fas fa-plus"></i>
@@ -267,7 +267,7 @@
               <p>monthly visits</p>
             </div>
 
-            <div class="section-3-bottom-3">
+            <div class="number">
               <img src="img/homepage_community_academy.svg" alt="homepage_community_academy.svg">
               <h2>
                 276K <i class="fas fa-plus"></i>
@@ -275,13 +275,13 @@
               <p>certified professionals</p>
             </div>
 
-            <div class="section-3-bottom-4">
+            <div class="number border-right">
               <img src="img/homepage_community_inbound.svg" alt="homepage_community_inbound.svg">
               <h2>26K</h2>
               <p>registered attendees</p>
             </div>
 
-            <div class="section-3-bottom-5">
+            <div id="HubSpot-App-Marketplace" class="number border-bottom margin-bottom">
               <img src="img/HubSpot-App-Marketplace-White.webp" alt="HubSpot-App-Marketplace-White.webp">
               <h2>
                 500 <i class="fas fa-plus"></i>
@@ -289,13 +289,13 @@
               <p>integrations</p>
             </div>
 
-            <div class="section-3-bottom-6">
+            <div class="number border-bottom margin-bottom">
               <img src="img/homepage_community_globe.svg" alt="homepage_community_globe.svg">
               <h2>6</h2>
               <p>languages</p>
             </div>
 
-            <div class="section-3-bottom-7">
+            <div class="number border-bottom margin-bottom">
               <img src="img/homepage_community_followers.svg" alt="homepage_community_followers.svg">
               <h2>
                 2.6M <i class="fas fa-plus"></i>
@@ -303,12 +303,12 @@
               <p>social followers</p>
             </div>
 
-            <div class="section-3-bottom-8">
+            <div class="number border-right border-bottom margin-bottom">
               <img src="img/Lists.svg" alt="Lists.svg">
               <h2>86,000</h2>
               <p>customers</p>
             </div>
-            <!-- /section-3-bottom -->
+            <!-- /section-3-numbers -->
 
           </div>
         </div>
@@ -321,13 +321,12 @@
 
           <div class="container-70">
 
-            <!-- section-4-top -->
-            <div class="section-4-top-left">
+            <div id="customers" class="box-left">
               <h2>86,000</h2>
               <p>customers in over <b>120</b><br>countries growing their<br>businesses with HubSpot</p>
             </div>
 
-            <div class="section-4-top-right">
+            <div id="brands" class="box-right">
               <img src="img/Atlassian-horizontal-blue@2x.webp" alt="Atlassian-horizontal-blue@2x.webp">
               <img src="img/doordash_owler_20181011_194113_original@2x.webp" alt="doordash_owler_20181011_194113_original@2x.webp">
               <img src="img/g2crowd-logo@2x.webp" alt="g2crowd-logo@2x.webp">
@@ -337,20 +336,17 @@
               <img src="img/Classpass-logo@2x.webp" alt="Classpass-logo@2x.webp">
               <img src="img/VMware_logo_gry_RGB_300dpi@2x.webp" alt="VMware_logo_gry_RGB_300dpi@2x.webp">
             </div>
-            <!-- /section-4-top -->
 
-            <!-- section-4-bottom -->
-            <div class="section-4-bottom-left">
+            <div id="growing-with-hubspot" class="box-left">
               <h2>Start Growing With HubSpot Today</h2>
               <p>With tools to make every part of your process more human and a support team excited to help you, getting started with inbound has never been easier.</p>
               <a href="#">Get Hubspot free</a>
               <p>Get started with FREE tools, or get more with our premium software.</p>
             </div>
 
-            <div class="section-4-bottom-right">
+            <div id="woman" class="box-right">
               <img src="img/woman.webp" alt="woman.webp">
             </div>
-            <!-- /section-4-bottom -->
 
           </div>
         </div>
@@ -366,8 +362,8 @@
 
         <div class="container-70">
 
-          <!-- footer-top -->
-          <div class="footer-top-1">
+          <!-- columns -->
+          <div class="column">
             <h3>Popular Features</h3>
             <ul>
               <li>
@@ -388,7 +384,7 @@
             </ul>
           </div>
 
-          <div class="footer-top-2">
+          <div class="column">
             <h3>Popular Features</h3>
             <ul>
               <li>
@@ -409,7 +405,7 @@
             </ul>
           </div>
 
-          <div class="footer-top-3">
+          <div class="column">
             <h3>Free Tools</h3>
             <ul>
               <li>
@@ -430,7 +426,7 @@
             </ul>
           </div>
 
-          <div class="footer-top-4">
+          <div id="last-column" class="column">
             <h3>Company</h3>
             <ul>
               <li>
@@ -452,7 +448,7 @@
                 <a href="#" id="contact-support">Contact HubSpot Support</a>
               </li>
               <li>
-                <ul>
+                <ul id="social-icons">
                   <li>
                     <a href="#">
                       <i class="fab fa-facebook-f"></i>
@@ -482,12 +478,12 @@
               </li>
             </ul>
           </div>
-          <!-- /footer-top -->
+          <!-- /columns -->
 
           <!-- footer-bottom -->
-          <div class="footer-bottom">
+          <div class="">
 
-            <div class="footer-bottom-1">
+            <div class="languages">
               <ul>
                 <li>
                   <a href="#">English</a>
@@ -510,16 +506,16 @@
               </ul>
             </div>
 
-            <div class="footer-bottom-2">
+            <div class="">
 
-              <div class="footer-bottom-2-left">
+              <div id="logo" class="credits">
                 <a href="#">
                   <img src="img/Wordmark-White.svg" alt="Wordmark-White.svg">
                 </a>
                 <h4>Copyright &copy; 2019 HubSpot, Inc.</h4>
               </div>
 
-              <div class="footer-bottom-2-right">
+              <div id="info" class="credits">
                 <ul>
                   <li>
                     <a href="#">Legal stuff</a>
